--- a/client/src/App.module.css
+++ b/client/src/App.module.css
@@ -1,11 +1,13 @@
 .App {
   display: flex;
   color: #9b9ba4;
-  background-color: #222131;
+  /* background-color: #222131; */
+  background-color: #020131;
   flex-direction: row;
   background-size: contain;
   background-size: 80%;
   background-position: center left 250px;
+  font-family: "Poppins", sans-serif;
 }
 
 .Appimg {
@@ -31,8 +33,8 @@
   color: aliceblue;
 }
 .socialButtons:hover {
-  background-color: #f0d5d5; 
-  color: #323149; 
+  background-color: #f0d5d5;
+  color: #323149;
 }
 
 .card {
