--- a/client/public/css/tailwind.css
+++ b/client/public/css/tailwind.css
@@ -616,6 +616,18 @@ video {
   top: 1rem;
 }
 
+.top-5 {
+  top: 1.25rem;
+}
+
+.top-6 {
+  top: 1.5rem;
+}
+
+.top-7 {
+  top: 1.75rem;
+}
+
 .z-0 {
   z-index: 0;
 }
@@ -638,6 +650,10 @@ video {
 
 .m-4 {
   margin: 1rem;
+}
+
+.m-6 {
+  margin: 1.5rem;
 }
 
 .mx-3 {
@@ -1046,6 +1062,22 @@ video {
 
 .w-screen {
   width: 100vw;
+}
+
+.w-3\/5 {
+  width: 60%;
+}
+
+.w-11\/12 {
+  width: 91.666667%;
+}
+
+.w-72 {
+  width: 18rem;
+}
+
+.w-4\/6 {
+  width: 66.666667%;
 }
 
 .min-w-\[180px\] {
