--- a/client/public/css/tailwind.css
+++ b/client/public/css/tailwind.css
@@ -782,12 +782,6 @@ video {
   margin-top: 2rem;
 }
 
-.mt-4 {
-  margin-top: 1rem;
-}
-
-.ml-1 {
-  margin-left: 0.25rem;}
 .mt-7 {
   margin-top: 1.75rem;
 }
@@ -802,6 +796,14 @@ video {
 
 .mb-4 {
   margin-bottom: 1rem;
+}
+
+.ml-1 {
+  margin-left: 0.25rem;
+}
+
+.mt-4 {
+  margin-top: 1rem;
 }
 
 .block {
@@ -911,14 +913,6 @@ video {
 
 .h-screen {
   height: 100vh;
-}
-
-.h-1\/6 {
-  height: 16.666667%;
-}
-
-.h-2\/6 {
-  height: 33.333333%;
 }
 
 .h-7 {
@@ -1098,14 +1092,6 @@ video {
   width: 75%;
 }
 
-.w-1\/4 {
-  width: 25%;
-}
-
-.w-1\/12 {
-  width: 8.333333%;
-}
-
 .min-w-\[180px\] {
   min-width: 180px;
 }
@@ -1143,12 +1129,12 @@ video {
   flex-direction: column;
 }
 
-.place-content-end {
-  place-content: end;
-}
-
 .items-start {
   align-items: flex-start;
+}
+
+.items-end {
+  align-items: flex-end;
 }
 
 .items-center {
@@ -1226,10 +1212,6 @@ video {
 
 .gap-y-7 {
   row-gap: 1.75rem;
-}
-
-.gap-y-3 {
-  row-gap: 0.75rem;
 }
 
 .overflow-hidden {
@@ -1480,22 +1462,24 @@ video {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
-.bg-\[\#020131\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(2 1 49 / var(--tw-bg-opacity));
-}
-
 .bg-\[\#07A1F8\] {
   --tw-bg-opacity: 1;
   background-color: rgb(7 161 248 / var(--tw-bg-opacity));
 }
 
-.bg-\[\#404062\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(64 64 98 / var(--tw-bg-opacity));}
 .bg-\[\#188ffd\] {
   --tw-bg-opacity: 1;
   background-color: rgb(24 143 253 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#020131\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(2 1 49 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#404062\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(64 64 98 / var(--tw-bg-opacity));
 }
 
 .fill-none {
@@ -1896,12 +1880,14 @@ video {
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
-.text-blue-600 {
-  --tw-text-opacity: 1;
-  color: rgb(37 99 235 / var(--tw-text-opacity));}
 .text-\[\#fff\] {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.text-blue-600 {
+  --tw-text-opacity: 1;
+  color: rgb(37 99 235 / var(--tw-text-opacity));
 }
 
 .placeholder-white::-moz-placeholder {
