--- a/client/public/css/tailwind.css
+++ b/client/public/css/tailwind.css
@@ -616,14 +616,6 @@ video {
   top: 1rem;
 }
 
-.top-5 {
-  top: 1.25rem;
-}
-
-.top-6 {
-  top: 1.5rem;
-}
-
 .top-7 {
   top: 1.75rem;
 }
@@ -644,21 +636,27 @@ video {
   margin: 0.75rem;
 }
 
-.m-5 {
-  margin: 1.25rem;
-}
-
 .m-4 {
   margin: 1rem;
 }
 
-.m-6 {
-  margin: 1.5rem;
+.m-5 {
+  margin: 1.25rem;
+}
+
+.mx-10 {
+  margin-left: 2.5rem;
+  margin-right: 2.5rem;
 }
 
 .mx-3 {
   margin-left: 0.75rem;
   margin-right: 0.75rem;
+}
+
+.mx-4 {
+  margin-left: 1rem;
+  margin-right: 1rem;
 }
 
 .mx-5 {
@@ -671,19 +669,14 @@ video {
   margin-right: 1.5rem;
 }
 
-.my-5 {
-  margin-top: 1.25rem;
-  margin-bottom: 1.25rem;
-}
-
-.mx-10 {
-  margin-left: 2.5rem;
-  margin-right: 2.5rem;
-}
-
 .my-2 {
   margin-top: 0.5rem;
   margin-bottom: 0.5rem;
+}
+
+.my-5 {
+  margin-top: 1.25rem;
+  margin-bottom: 1.25rem;
 }
 
 .mb-0 {
@@ -698,12 +691,20 @@ video {
   margin-bottom: 0.5rem;
 }
 
+.mb-4 {
+  margin-bottom: 1rem;
+}
+
 .mb-5 {
   margin-bottom: 1.25rem;
 }
 
 .mb-6 {
   margin-bottom: 1.5rem;
+}
+
+.ml-1 {
+  margin-left: 0.25rem;
 }
 
 .ml-10 {
@@ -758,32 +759,32 @@ video {
   margin-top: 0.5rem;
 }
 
+.mt-20 {
+  margin-top: 5rem;
+}
+
 .mt-3 {
   margin-top: 0.75rem;
+}
+
+.mt-32 {
+  margin-top: 8rem;
+}
+
+.mt-4 {
+  margin-top: 1rem;
 }
 
 .mt-5 {
   margin-top: 1.25rem;
 }
 
-.mt-8 {
-  margin-top: 2rem;
-}
-
-.mt-10 {
-  margin-top: 2.5rem;
-}
-
-.mt-6 {
-  margin-top: 1.5rem;
-}
-
 .mt-7 {
   margin-top: 1.75rem;
 }
 
-.mt-20 {
-  margin-top: 5rem;
+.mt-8 {
+  margin-top: 2rem;
 }
 
 .block {
@@ -870,6 +871,10 @@ video {
   height: 1.5rem;
 }
 
+.h-7 {
+  height: 1.75rem;
+}
+
 .h-8 {
   height: 2rem;
 }
@@ -927,6 +932,10 @@ video {
   width: 7rem;
 }
 
+.w-3\/4 {
+  width: 75%;
+}
+
 .w-32 {
   width: 8rem;
 }
@@ -941,6 +950,10 @@ video {
 
 .w-4\/5 {
   width: 80%;
+}
+
+.w-4\/6 {
+  width: 66.666667%;
 }
 
 .w-40 {
@@ -969,6 +982,10 @@ video {
 
 .w-64 {
   width: 16rem;
+}
+
+.w-72 {
+  width: 18rem;
 }
 
 .w-8 {
@@ -1062,22 +1079,6 @@ video {
 
 .w-screen {
   width: 100vw;
-}
-
-.w-3\/5 {
-  width: 60%;
-}
-
-.w-11\/12 {
-  width: 91.666667%;
-}
-
-.w-72 {
-  width: 18rem;
-}
-
-.w-4\/6 {
-  width: 66.666667%;
 }
 
 .min-w-\[180px\] {
@@ -1206,6 +1207,10 @@ video {
   overflow: hidden;
 }
 
+.overflow-y-auto {
+  overflow-y: auto;
+}
+
 .text-ellipsis {
   text-overflow: ellipsis;
 }
@@ -1216,6 +1221,10 @@ video {
 
 .rounded {
   border-radius: 0.25rem;
+}
+
+.rounded-2xl {
+  border-radius: 1rem;
 }
 
 .rounded-3xl {
@@ -1248,6 +1257,11 @@ video {
 
 .border-2 {
   border-width: 2px;
+}
+
+.border-\[\#07A1F8\] {
+  --tw-border-opacity: 1;
+  border-color: rgb(7 161 248 / var(--tw-border-opacity));
 }
 
 .border-\[\#dddb6376\] {
@@ -1289,9 +1303,24 @@ video {
   border-color: rgb(255 255 255 / var(--tw-border-opacity));
 }
 
-.border-\[\#07A1F8\] {
-  --tw-border-opacity: 1;
-  border-color: rgb(7 161 248 / var(--tw-border-opacity));
+.bg-\[\#020131\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(2 1 49 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#07A1F8\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(7 161 248 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#07a1f8\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(7 161 248 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#188ffd\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(24 143 253 / var(--tw-bg-opacity));
 }
 
 .bg-\[\#1b7757\] {
@@ -1327,6 +1356,11 @@ video {
 .bg-\[\#39394b\] {
   --tw-bg-opacity: 1;
   background-color: rgb(57 57 75 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#404062\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(64 64 98 / var(--tw-bg-opacity));
 }
 
 .bg-\[\#4f4f62\] {
@@ -1437,14 +1471,9 @@ video {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
-.bg-\[\#07A1F8\] {
+.bg-\[\#f8cc07\] {
   --tw-bg-opacity: 1;
-  background-color: rgb(7 161 248 / var(--tw-bg-opacity));
-}
-
-.bg-\[\#07a1f8\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(7 161 248 / var(--tw-bg-opacity));
+  background-color: rgb(248 204 7 / var(--tw-bg-opacity));
 }
 
 .fill-none {
@@ -1509,6 +1538,11 @@ video {
   padding-right: 0.5rem;
 }
 
+.px-20 {
+  padding-left: 5rem;
+  padding-right: 5rem;
+}
+
 .px-3 {
   padding-left: 0.75rem;
   padding-right: 0.75rem;
@@ -1522,6 +1556,16 @@ video {
 .px-5 {
   padding-left: 1.25rem;
   padding-right: 1.25rem;
+}
+
+.py-0 {
+  padding-top: 0px;
+  padding-bottom: 0px;
+}
+
+.py-0\.5 {
+  padding-top: 0.125rem;
+  padding-bottom: 0.125rem;
 }
 
 .py-1 {
@@ -1542,21 +1586,6 @@ video {
 .py-2\.5 {
   padding-top: 0.625rem;
   padding-bottom: 0.625rem;
-}
-
-.py-0 {
-  padding-top: 0px;
-  padding-bottom: 0px;
-}
-
-.py-0\.5 {
-  padding-top: 0.125rem;
-  padding-bottom: 0.125rem;
-}
-
-.px-20 {
-  padding-left: 5rem;
-  padding-right: 5rem;
 }
 
 .py-4 {
@@ -1598,10 +1627,6 @@ video {
 
 .pt-3 {
   padding-top: 0.75rem;
-}
-
-.pr-2 {
-  padding-right: 0.5rem;
 }
 
 .pt-4 {
@@ -1648,6 +1673,10 @@ video {
   font-size: 1.6rem;
 }
 
+.text-\[1\.7rem\] {
+  font-size: 1.7rem;
+}
+
 .text-\[14px\] {
   font-size: 14px;
 }
@@ -1674,10 +1703,6 @@ video {
 
 .text-\[45px\] {
   font-size: 45px;
-}
-
-.text-\[1\.7rem\] {
-  font-size: 1.7rem;
 }
 
 .font-bold {
@@ -1783,6 +1808,11 @@ video {
   color: rgb(255 89 139 / var(--tw-text-opacity));
 }
 
+.text-\[\#fff\] {
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
 .text-\[\#ffffff\] {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
@@ -1791,6 +1821,11 @@ video {
 .text-black {
   --tw-text-opacity: 1;
   color: rgb(0 0 0 / var(--tw-text-opacity));
+}
+
+.text-blue-600 {
+  --tw-text-opacity: 1;
+  color: rgb(37 99 235 / var(--tw-text-opacity));
 }
 
 .text-gray-200 {
@@ -1813,17 +1848,12 @@ video {
   color: rgb(17 24 39 / var(--tw-text-opacity));
 }
 
-.text-white {
-  --tw-text-opacity: 1;
-  color: rgb(255 255 255 / var(--tw-text-opacity));
-}
-
 .text-neutral-100 {
   --tw-text-opacity: 1;
   color: rgb(245 245 245 / var(--tw-text-opacity));
 }
 
-.text-\[\#fff\] {
+.text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
@@ -1876,6 +1906,16 @@ video {
   overflow: visible;
 }
 
+.hover\:bg-\[\#1263af\]:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(18 99 175 / var(--tw-bg-opacity));
+}
+
+.hover\:bg-\[\#127fbe\]:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(18 127 190 / var(--tw-bg-opacity));
+}
+
 .hover\:bg-\[\#c94219\]:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(201 66 25 / var(--tw-bg-opacity));
@@ -1899,11 +1939,6 @@ video {
 .hover\:bg-gray-100:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(243 244 246 / var(--tw-bg-opacity));
-}
-
-.hover\:bg-\[\#127fbe\]:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(18 127 190 / var(--tw-bg-opacity));
 }
 
 .hover\:text-\[\#3570bd\]:hover {
