--- a/client/public/css/tailwind.css
+++ b/client/public/css/tailwind.css
@@ -691,6 +691,10 @@ video {
   margin-bottom: 0.5rem;
 }
 
+.mb-20 {
+  margin-bottom: 5rem;
+}
+
 .mb-4 {
   margin-bottom: 1rem;
 }
@@ -952,10 +956,6 @@ video {
   width: 80%;
 }
 
-.w-4\/6 {
-  width: 66.666667%;
-}
-
 .w-40 {
   width: 10rem;
 }
@@ -982,10 +982,6 @@ video {
 
 .w-64 {
   width: 16rem;
-}
-
-.w-72 {
-  width: 18rem;
 }
 
 .w-8 {
@@ -1207,10 +1203,6 @@ video {
   overflow: hidden;
 }
 
-.overflow-y-auto {
-  overflow-y: auto;
-}
-
 .text-ellipsis {
   text-overflow: ellipsis;
 }
@@ -1407,6 +1399,11 @@ video {
   background-color: rgb(229 252 24 / var(--tw-bg-opacity));
 }
 
+.bg-\[\#f8cc07\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(248 204 7 / var(--tw-bg-opacity));
+}
+
 .bg-\[\#ff69b4\] {
   --tw-bg-opacity: 1;
   background-color: rgb(255 105 180 / var(--tw-bg-opacity));
@@ -1469,11 +1466,6 @@ video {
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-}
-
-.bg-\[\#f8cc07\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(248 204 7 / var(--tw-bg-opacity));
 }
 
 .fill-none {
@@ -1605,6 +1597,10 @@ video {
   padding-left: 0.5rem;
 }
 
+.pr-2 {
+  padding-right: 0.5rem;
+}
+
 .pr-4 {
   padding-right: 1rem;
 }
@@ -1727,6 +1723,11 @@ video {
 
 .leading-tight {
   line-height: 1.25;
+}
+
+.text-\[\#0f0\] {
+  --tw-text-opacity: 1;
+  color: rgb(0 255 0 / var(--tw-text-opacity));
 }
 
 .text-\[\#1f1e1e\] {
