--- a/client/public/css/tailwind.css
+++ b/client/public/css/tailwind.css
@@ -620,8 +620,20 @@ video {
   top: 1.75rem;
 }
 
+.top-5 {
+  top: 1.25rem;
+}
+
+.top-3 {
+  top: 0.75rem;
+}
+
 .z-0 {
   z-index: 0;
+}
+
+.m-0 {
+  margin: 0px;
 }
 
 .m-1 {
@@ -791,6 +803,18 @@ video {
   margin-top: 2rem;
 }
 
+.mt-10 {
+  margin-top: 2.5rem;
+}
+
+.mb-24 {
+  margin-bottom: 6rem;
+}
+
+.mr-10 {
+  margin-right: 2.5rem;
+}
+
 .block {
   display: block;
 }
@@ -863,6 +887,10 @@ video {
   height: 66.666667%;
 }
 
+.h-48 {
+  height: 12rem;
+}
+
 .h-5 {
   height: 1.25rem;
 }
@@ -906,6 +934,10 @@ video {
 
 .h-32 {
   height: 8rem;
+}
+
+.h-52 {
+  height: 13rem;
 }
 
 .w-1\/5 {
@@ -1081,6 +1113,26 @@ video {
   width: 100vw;
 }
 
+.w-52 {
+  width: 13rem;
+}
+
+.w-11\/12 {
+  width: 91.666667%;
+}
+
+.w-16 {
+  width: 4rem;
+}
+
+.w-1\/4 {
+  width: 25%;
+}
+
+.w-2\/4 {
+  width: 50%;
+}
+
 .min-w-\[180px\] {
   min-width: 180px;
 }
@@ -1184,6 +1236,10 @@ video {
 
 .gap-8 {
   gap: 2rem;
+}
+
+.gap-6 {
+  gap: 1.5rem;
 }
 
 .gap-x-3 {
@@ -1369,6 +1425,11 @@ video {
   background-color: rgb(98 84 255 / var(--tw-bg-opacity));
 }
 
+.bg-\[\#818080\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(129 128 128 / var(--tw-bg-opacity));
+}
+
 .bg-\[\#8a912b\] {
   --tw-bg-opacity: 1;
   background-color: rgb(138 145 43 / var(--tw-bg-opacity));
@@ -1472,9 +1533,64 @@ video {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
-.bg-\[\#818080\] {
+.bg-yellow-400 {
   --tw-bg-opacity: 1;
-  background-color: rgb(129 128 128 / var(--tw-bg-opacity));
+  background-color: rgb(250 204 21 / var(--tw-bg-opacity));
+}
+
+.bg-gradient-to-t {
+  background-image: linear-gradient(to top, var(--tw-gradient-stops));
+}
+
+.from-blue-500 {
+  --tw-gradient-from: #3b82f6 var(--tw-gradient-from-position);
+  --tw-gradient-to: rgb(59 130 246 / 0) var(--tw-gradient-to-position);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+}
+
+.from-\[\#9D73F5\] {
+  --tw-gradient-from: #9D73F5 var(--tw-gradient-from-position);
+  --tw-gradient-to: rgb(157 115 245 / 0) var(--tw-gradient-to-position);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+}
+
+.from-\[\#7657b9\] {
+  --tw-gradient-from: #7657b9 var(--tw-gradient-from-position);
+  --tw-gradient-to: rgb(118 87 185 / 0) var(--tw-gradient-to-position);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+}
+
+.from-\[\#4b2c8d\] {
+  --tw-gradient-from: #4b2c8d var(--tw-gradient-from-position);
+  --tw-gradient-to: rgb(75 44 141 / 0) var(--tw-gradient-to-position);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+}
+
+.from-\[\#5b2fb9\] {
+  --tw-gradient-from: #5b2fb9 var(--tw-gradient-from-position);
+  --tw-gradient-to: rgb(91 47 185 / 0) var(--tw-gradient-to-position);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+}
+
+.to-purple-500 {
+  --tw-gradient-to: #a855f7 var(--tw-gradient-to-position);
+}
+
+.to-\[\#DCD2F0\] {
+  --tw-gradient-to: #DCD2F0 var(--tw-gradient-to-position);
+}
+
+.to-\[\#e2e0e6\] {
+  --tw-gradient-to: #e2e0e6 var(--tw-gradient-to-position);
+}
+
+.to-\[\#ffffff\] {
+  --tw-gradient-to: #ffffff var(--tw-gradient-to-position);
+}
+
+.bg-clip-text {
+  -webkit-background-clip: text;
+          background-clip: text;
 }
 
 .fill-none {
@@ -1606,10 +1722,6 @@ video {
   padding-left: 0.5rem;
 }
 
-.pr-2 {
-  padding-right: 0.5rem;
-}
-
 .pr-4 {
   padding-right: 1rem;
 }
@@ -1638,6 +1750,10 @@ video {
   padding-top: 1rem;
 }
 
+.pr-2 {
+  padding-right: 0.5rem;
+}
+
 .text-left {
   text-align: left;
 }
@@ -1652,6 +1768,10 @@ video {
 
 .text-start {
   text-align: start;
+}
+
+.font-mono {
+  font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
 }
 
 .text-14 {
@@ -1710,8 +1830,20 @@ video {
   font-size: 45px;
 }
 
+.text-\[80px\] {
+  font-size: 80px;
+}
+
+.text-\[70px\] {
+  font-size: 70px;
+}
+
 .text-\[65px\] {
   font-size: 65px;
+}
+
+.text-\[40px\] {
+  font-size: 40px;
 }
 
 .font-bold {
@@ -1732,6 +1864,10 @@ video {
 
 .font-thin {
   font-weight: 100;
+}
+
+.font-extrabold {
+  font-weight: 800;
 }
 
 .leading-tight {
@@ -1870,6 +2006,15 @@ video {
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.text-green-400 {
+  --tw-text-opacity: 1;
+  color: rgb(74 222 128 / var(--tw-text-opacity));
+}
+
+.text-transparent {
+  color: transparent;
 }
 
 .placeholder-white::-moz-placeholder {
