--- a/client/public/css/tailwind.css
+++ b/client/public/css/tailwind.css
@@ -624,6 +624,10 @@ video {
   z-index: 0;
 }
 
+.m-0 {
+  margin: 0px;
+}
+
 .m-1 {
   margin: 0.25rem;
 }
@@ -807,6 +811,10 @@ video {
   display: grid;
 }
 
+.hidden {
+  display: none;
+}
+
 .h-1\/4 {
   height: 25%;
 }
@@ -849,6 +857,10 @@ video {
 
 .h-3\/6 {
   height: 50%;
+}
+
+.h-32 {
+  height: 8rem;
 }
 
 .h-4 {
@@ -902,10 +914,6 @@ video {
 
 .h-screen {
   height: 100vh;
-}
-
-.h-32 {
-  height: 8rem;
 }
 
 .w-1\/5 {
@@ -1373,6 +1381,11 @@ video {
   background-color: rgb(98 84 255 / var(--tw-bg-opacity));
 }
 
+.bg-\[\#818080\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(129 128 128 / var(--tw-bg-opacity));
+}
+
 .bg-\[\#8a912b\] {
   --tw-bg-opacity: 1;
   background-color: rgb(138 145 43 / var(--tw-bg-opacity));
@@ -1474,11 +1487,6 @@ video {
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-}
-
-.bg-\[\#818080\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(129 128 128 / var(--tw-bg-opacity));
 }
 
 .fill-none {
@@ -1686,6 +1694,10 @@ video {
   font-size: 1.7rem;
 }
 
+.text-\[12px\] {
+  font-size: 12px;
+}
+
 .text-\[14px\] {
   font-size: 14px;
 }
@@ -1716,18 +1728,6 @@ video {
 
 .text-\[65px\] {
   font-size: 65px;
-}
-
-.text-\[8px\] {
-  font-size: 8px;
-}
-
-.text-\[10px\] {
-  font-size: 10px;
-}
-
-.text-\[12px\] {
-  font-size: 12px;
 }
 
 .font-bold {
@@ -1883,14 +1883,14 @@ video {
   color: rgb(245 245 245 / var(--tw-text-opacity));
 }
 
-.text-white {
-  --tw-text-opacity: 1;
-  color: rgb(255 255 255 / var(--tw-text-opacity));
-}
-
 .text-red-400 {
   --tw-text-opacity: 1;
   color: rgb(248 113 113 / var(--tw-text-opacity));
+}
+
+.text-white {
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
 .placeholder-white::-moz-placeholder {
